SigmaCodebackup3rdSep/objects/Invoice_Tax__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Payment_Terms_1__c</fullName>
        <label>Payment Terms 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_2__c</fullName>
        <label>Payment Terms 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_3__c</fullName>
        <label>Payment Terms 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Tax and Payment Terms</label>
</CustomObject>